name:                hca
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/d-meiser@github.com/hca#readme
license:             BSD3
license-file:        LICENSE
author:              Dominic Meiser
maintainer:          dmeiser79@gmail.com
copyright:           Dominic Meiser
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , repa < 4
  default-language:    Haskell2010

executable hca-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hca
  default-language:    Haskell2010

test-suite hca-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hca
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d-meiser@github.com/hca
